Add some data filters

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,8 @@
 digest.title=MotoFan.Ru digests in Telegram
+digest.name.unknown=Unknown
+digest.group.admins=Group: Administrators
+digest.group.coords=Group: Coordinators
+digest.group.moders=Group: Moderators
+digest.group.users=Group: Users
+digest.date.time=Time
+digest.date.date=Date
