--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,1 +1,8 @@
 digest.title=Новости MotoFan.Ru в конференции Telegram
+digest.name.unknown=Неизвестный
+digest.group.admins=Группа: Администраторы
+digest.group.coords=Группа: Координаторы
+digest.group.moders=Группа: Модераторы
+digest.group.users=Группа: Пользователи
+digest.date.time=Время
+digest.date.date=Дата
