Add digest limiter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,4 @@ digest.group.moders=Group: Moderators
 digest.group.users=Group: Users
 digest.date.time=Time
 digest.date.date=Date
+digest.list.empty=No digests found.
