--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -6,3 +6,4 @@ digest.group.moders=Группа: Модераторы
 digest.group.users=Группа: Пользователи
 digest.date.time=Время
 digest.date.date=Дата
+digest.list.empty=Дайджесты не найдены.
