--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -7,3 +7,5 @@ digest.group.users=Group: Users
 digest.date.time=Time
 digest.date.date=Date
 digest.list.empty=No digests found.
+digest.paginator.pages=Pages
+digest.paginator.page=Page
