--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -7,3 +7,5 @@ digest.group.users=Группа: Пользователи
 digest.date.time=Время
 digest.date.date=Дата
 digest.list.empty=Дайджесты не найдены.
+digest.paginator.pages=Страниц
+digest.paginator.page=Страница
