Add Go To Page Form to Paginator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -9,3 +9,5 @@ digest.date.date=Date
 digest.list.empty=No digests found.
 digest.paginator.pages=Pages
 digest.paginator.page=Page
+digest.paginator.ok=OK
+digest.paginator.placeholder=#
