--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -9,3 +9,5 @@ digest.date.date=Дата
 digest.list.empty=Дайджесты не найдены.
 digest.paginator.pages=Страниц
 digest.paginator.page=Страница
+digest.paginator.ok=ОК
+digest.paginator.placeholder=№
