Add skeleton of search form

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -11,3 +11,5 @@ digest.paginator.pages=Pages
 digest.paginator.page=Page
 digest.paginator.ok=OK
 digest.paginator.placeholder=#
+digest.search.placeholder=Search...
+digest.search.button=Find
