--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -11,3 +11,5 @@ digest.paginator.pages=Страниц
 digest.paginator.page=Страница
 digest.paginator.ok=ОК
 digest.paginator.placeholder=№
+digest.search.placeholder=Поиск...
+digest.search.button=Найти
