Page Search example

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -13,3 +13,7 @@ digest.paginator.ok=ОК
 digest.paginator.placeholder=№
 digest.search.placeholder=Поиск...
 digest.search.button=Найти
+digest.search.title=Результаты поиска дайджестов
+digest.search.results=Результаты поиска
+digest.search.username=В именах пользователя:
+digest.search.digest=В дайджестах:
