--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -13,3 +13,8 @@ digest.paginator.ok=OK
 digest.paginator.placeholder=#
 digest.search.placeholder=Search...
 digest.search.button=Find
+digest.search.title=Search Results of Digests
+digest.search.results=Search Results
+digest.search.username=In user names:
+digest.search.digest=In digests:
+
