Add Markdown and Syntax highlighter

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,4 +17,6 @@ digest.search.title=Search Results of Digests
 digest.search.results=Search Results
 digest.search.username=In user names:
 digest.search.digest=In digests:
-
+markdown.title=Test Markdown Markup
+markdown.preview=Preview Markdown
+markdown.checkbox=Markdown/Code Highliter
