--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -17,3 +17,6 @@ digest.search.title=Результаты поиска дайджестов
 digest.search.results=Результаты поиска
 digest.search.username=В именах пользователя:
 digest.search.digest=В дайджестах:
+markdown.title=Тестирование разметки Markdown
+markdown.preview=Предпросмотр Markdown
+markdown.checkbox=Разметка Markdown/Подсветка кода
