Add Localization support

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -20,3 +20,12 @@ digest.search.digest=In digests:
 markdown.title=Test Markdown Markup
 markdown.preview=Preview Markdown
 markdown.checkbox=Markdown/Code Highliter
+
+digestbot.command.hello=\
+  Hello, my creators!::\
+  Have a nice day, %username%!::\
+  Hey. I'm a little broken here. Fix me with the next commit.::\
+  Wow. Long time no see. Hi!::\
+  I'm still here. Hi! :3::\
+  Hi, dude!::\
+  Hello to you, my developer!::
