--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -20,3 +20,12 @@ digest.search.digest=В дайджестах:
 markdown.title=Тестирование разметки Markdown
 markdown.preview=Предпросмотр Markdown
 markdown.checkbox=Разметка Markdown/Подсветка кода
+
+digestbot.command.hello=\
+  Привет, создатели!::\
+  Хорошего дня, %username%!::\
+  Привет. Я тут немного сломалась. Выправи меня следующим коммитом.::\
+  Ого. Давно не виделись! Здравствуй.::\
+  Я всё ещё тут. Привет :3::\
+  Привет, красавчик!::\
+  Привет тебе, мой разработчик!::
