Add l10n for errors

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,3 +29,8 @@ digestbot.command.hello=\
   I'm still here. Hi! :3::\
   Hi, dude!::\
   Hello to you, my developer!::
+digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command.\n\
+  Only my creator can use it.
+digestbot.error.chatid=Wrong chat id number.
+digestbot.error.sticker.format=Wrong command format, please use:\n`/sticker <chat id> <sticker id>`.
+digestbot.error.send.format=Wrong command format, please use:\n`/send <chat id> <message>`.
