--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -29,3 +29,8 @@ digestbot.command.hello=\
   Я всё ещё тут. Привет :3::\
   Привет, красавчик!::\
   Привет тебе, мой разработчик!::
+digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.\
+  \nЕё может использовать лишь мой создатель.
+digestbot.error.chatid=Неправильный "id" чата.
+digestbot.error.sticker.format=Неправильный формат комманды, используйте:\n`/sticker <chat id> <sticker id>`.
+digestbot.error.send.format=Неправильный формат комманды, используйте:\n`/send <chat id> <message>`.
