Fix some bugs in send-type commands

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -31,6 +31,6 @@ digestbot.command.hello=\
   Привет тебе, мой разработчик!::
 digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.\
   \nЕё может использовать лишь мой создатель.
-digestbot.error.chatid=Неправильный "id" чата.
+digestbot.error.chatid=Неправильный номер "id" чата.
 digestbot.error.sticker.format=Неправильный формат комманды, используйте:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Неправильный формат комманды, используйте:\n`/send <chat id> <message>`.
