--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,6 +31,6 @@ digestbot.command.hello=\
   Hello to you, my developer!::
 digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command.\n\
   Only my creator can use it.
-digestbot.error.chatid=Wrong chat id number.
+digestbot.error.chatid=Wrong chat "id" number.
 digestbot.error.sticker.format=Wrong command format, please use:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Wrong command format, please use:\n`/send <chat id> <message>`.
