--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -32,5 +32,6 @@ digestbot.command.hello=\
 digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command.\n\
   Only my creator can use it.
 digestbot.error.chatid=Wrong chat "id" number.
+digestbot.error.sticker=Cannot send sticker "%s" into "%d" chat, error: "%s".
 digestbot.error.sticker.format=Wrong command format, please use:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Wrong command format, please use:\n`/send <chat id> <message>`.
