--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -32,5 +32,6 @@ digestbot.command.hello=\
 digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.\
   \nЕё может использовать лишь мой создатель.
 digestbot.error.chatid=Неправильный номер "id" чата.
+digestbot.error.sticker=Не могу отправить стикер "%s" в чат "%d", ошибка: "%s".
 digestbot.error.sticker.format=Неправильный формат комманды, используйте:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Неправильный формат комманды, используйте:\n`/send <chat id> <message>`.
