Implement /start command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -29,6 +29,7 @@ digestbot.command.hello=\
   I'm still here. Hi! :3::\
   Hi, dude!::\
   Hello to you, my developer!::
+digestbot.command.start=Hi, I'm Gadget Hackwrench!\nPlease send me /help to get a full list of commands.
 digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command.\n\
   Only my creator can use it.
 digestbot.error.chatid=Wrong chat "id" number.
