--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -29,6 +29,7 @@ digestbot.command.hello=\
   Я всё ещё тут. Привет :3::\
   Привет, красавчик!::\
   Привет тебе, мой разработчик!::
+digestbot.command.start=Привет, я Гаечка! Для того чтобы получить список команд отправьте /help.
 digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.\
   \nЕё может использовать лишь мой создатель.
 digestbot.error.chatid=Неправильный номер "id" чата.
