--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,8 +30,7 @@ digestbot.command.hello=\
   Hi, dude!::\
   Hello to you, my developer!::
 digestbot.command.start=Hi, I'm Gadget Hackwrench!\nPlease send me /help to get a full list of commands.
-digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command.\n\
-  Only my creator can use it.
+digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command. Only my creator can use it.
 digestbot.error.chatid=Wrong chat "id" number.
 digestbot.error.sticker=Cannot send sticker "%s" into "%d" chat, error: "%s".
 digestbot.error.sticker.format=Wrong command format, please use:\n`/sticker <chat id> <sticker id>`.
