--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -30,8 +30,7 @@ digestbot.command.hello=\
   Привет, красавчик!::\
   Привет тебе, мой разработчик!::
 digestbot.command.start=Привет, я Гаечка! Для того чтобы получить список команд отправьте /help.
-digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.\
-  \nЕё может использовать лишь мой создатель.
+digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель.
 digestbot.error.chatid=Неправильный номер "id" чата.
 digestbot.error.sticker=Не могу отправить стикер "%s" в чат "%d", ошибка: "%s".
 digestbot.error.sticker.format=Неправильный формат комманды, используйте:\n`/sticker <chat id> <sticker id>`.
