Add help strings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -30,6 +30,21 @@ digestbot.command.hello=\
   Hi, dude!::\
   Hello to you, my developer!::
 digestbot.command.start=Hi, I'm Gadget Hackwrench!\nPlease send me /help to get a full list of commands.
+digestbot.command.help=\
+  Gadget Hackwrench commands help:::\
+  /digest — Show latest messages with `#digest` tag.::\
+  /rates — Show exchange rates.::\
+  /charts — Show charts of exchange rates.::\
+  /start — Show greeting.::\
+  /coffee — Send sticker with coffee.::\
+  /game — Game server statistic.::\
+  /help — This help.::
+digestbot.command.help.admin=\
+  /hello или /hi  — Get greeting from bot.::\
+  /delete `<arg>` — Remove digest entry by <arg> number.::\
+  /send `<chat id>` `<message>` — Send `<message>` into `<chat id>` chat.::\
+  /sticker `<chat id>` `<sticker id>` — Send sticker into `<chat id>` chat.::\
+  /hostip — Host server IP address.
 digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command. Only my creator can use it.
 digestbot.error.chatid=Wrong chat "id" number.
 digestbot.error.sticker=Cannot send sticker "%s" into "%d" chat, error: "%s".
