Implement /help command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -31,19 +31,19 @@ digestbot.command.hello=\
   Hello to you, my developer!::
 digestbot.command.start=Hi, I'm Gadget Hackwrench!\nPlease send me /help to get a full list of commands.
 digestbot.command.help=\
-  Gadget Hackwrench commands help:::\
-  /digest — Show latest messages with `#digest` tag.::\
-  /rates — Show exchange rates.::\
-  /charts — Show charts of exchange rates.::\
-  /start — Show greeting.::\
-  /coffee — Send sticker with coffee.::\
-  /game — Game server statistic.::\
-  /help — This help.::
+  Gadget Hackwrench commands help:\n\
+  /digest — Show latest messages with `#digest` tag.\n\
+  /rates — Show exchange rates.\n\
+  /charts — Show charts of exchange rates.\n\
+  /start — Show start greeting.\n\
+  /coffee — Send sticker with coffee.\n\
+  /game — Show game server statistic.\n\
+  /help — Show this help.
 digestbot.command.help.admin=\
-  /hello или /hi  — Get greeting from bot.::\
-  /delete `<arg>` — Remove digest entry by <arg> number.::\
-  /send `<chat id>` `<message>` — Send `<message>` into `<chat id>` chat.::\
-  /sticker `<chat id>` `<sticker id>` — Send sticker into `<chat id>` chat.::\
+  /hello или /hi  — Get greeting from bot.\n\
+  /delete <arg> — Remove digest entry by <arg> number.\n\
+  /send <chat id> <message> — Send <message> into <chat id>.\n\
+  /sticker <chat id> <sticker id> — Send sticker into <chat id>.\n\
   /hostip — Host server IP address.
 digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command. Only my creator can use it.
 digestbot.error.chatid=Wrong chat "id" number.
