--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -31,19 +31,19 @@ digestbot.command.hello=\
   Привет тебе, мой разработчик!::
 digestbot.command.start=Привет, я Гаечка! Для того чтобы получить список команд отправьте /help.
 digestbot.command.help=\
-  Помощь по командам няшки-бота:::\
-  /digest — Показать последние сообщения с тегом `#digest`.::\
-  /rates — Показать различные котировки.::\
-  /charts — Показать различные графики котировок.::\
-  /start — Приветствие.::\
-  /coffee — Стикер с кофе.::\
-  /game — Статистика игровых серверов.::\
-  /help — Эта справка.::
+  Помощь по командам няшки-бота:\n\
+  /digest — Показать последние сообщения с тегом `#digest`.\n\
+  /rates — Показать различные котировки.\n\
+  /charts — Показать различные графики котировок.\n\
+  /start — Приветствие.\n\
+  /coffee — Стикер с кофе.\n\
+  /game — Статистика игровых серверов.\n\
+  /help — Эта справка.
 digestbot.command.help.admin=\
-  /hello или /hi  — Получить привет от бота.::\
-  /delete `<arg>` — Удалить запись дайджеста под номером <arg>.::\
-  /send `<chat id>` `<message>` — Отправить `<message>` в `<chat id>`.::\
-  /sticker `<chat id>` `<sticker id>` — Отправить стикер в `<chat id>`.::\
+  /hello или /hi  — Получить привет от бота.\n\
+  /delete <arg> — Удалить запись дайджеста под номером <arg>.\n\
+  /send <chat id> <message> — Отправить <message> в <chat id>.\n\
+  /sticker <chat id> <sticker id> — Отправить стикер в <chat id>.\n\
   /hostip — IP-адрес хост-сервера.
 digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель.
 digestbot.error.chatid=Неправильный номер "id" чата.
