Implement /hostip command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -45,8 +45,11 @@ digestbot.command.help.admin=\
   /send <chat id> <message> — Send <message> into <chat id>.\n\
   /sticker <chat id> <sticker id> — Send sticker into <chat id>.\n\
   /hostip — Host server IP address.
+digestbot.command.hostip=Come to me (via SSH). My IP address:
 digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command. Only my creator can use it.
 digestbot.error.chatid=Wrong chat "id" number.
 digestbot.error.sticker=Cannot send sticker "%s" into "%d" chat, error: "%s".
 digestbot.error.sticker.format=Wrong command format, please use:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Wrong command format, please use:\n`/send <chat id> <message>`.
+digestbot.error.hostip=Error getting host IP address:
+digestbot.error.response.toolong=Error: unexpectedly large response size
