--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -45,8 +45,11 @@ digestbot.command.help.admin=\
   /send <chat id> <message> — Отправить <message> в <chat id>.\n\
   /sticker <chat id> <sticker id> — Отправить стикер в <chat id>.\n\
   /hostip — IP-адрес хост-сервера.
+digestbot.command.hostip=Войди в меня (по SSH). Мой IP:
 digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель.
 digestbot.error.chatid=Неправильный номер "id" чата.
 digestbot.error.sticker=Не могу отправить стикер "%s" в чат "%d", ошибка: "%s".
 digestbot.error.sticker.format=Неправильный формат комманды, используйте:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Неправильный формат комманды, используйте:\n`/send <chat id> <message>`.
+digestbot.error.hostip=Ошибка получения IP-адреса:
+digestbot.error.response.toolong=Ошибка: неожиданно большой размер ответа.
