--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,6 +44,7 @@ digestbot.command.help.admin=\
   /delete <arg> — Remove digest entry by <arg> number.\n\
   /send <chat id> <message> — Send <message> into <chat id>.\n\
   /sticker <chat id> <sticker id> — Send sticker into <chat id>.\n\
+  /image <chat id> <url> — Send image into <chat id>.\n\
   /hostip — Host server IP address.
 digestbot.command.hostip=Come to me (via SSH). My IP address:
 digestbot.command.game=Game statistics:
@@ -55,3 +56,4 @@ digestbot.error.send.format=Wrong command format, please use:\n`/send <chat id> 
 digestbot.error.hostip=Error getting host IP address:
 digestbot.error.response.toolong=Error: unexpectedly large response size
 digestbot.error.image=Cannot send image from url "%s" into "%d" chat, error: "%s".
+digestbot.error.image.format=Wrong command format, please use:\n`/image <chat id> <image url>`.
