Implement /image command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -44,7 +44,7 @@ digestbot.command.help.admin=\
   /delete <arg> — Remove digest entry by <arg> number.\n\
   /send <chat id> <message> — Send <message> into <chat id>.\n\
   /sticker <chat id> <sticker id> — Send sticker into <chat id>.\n\
-  /image <chat id> <url> — Send image into <chat id>.\n\
+  /image <chat id> <url> — Send photo into <chat id>.\n\
   /hostip — Host server IP address.
 digestbot.command.hostip=Come to me (via SSH). My IP address:
 digestbot.command.game=Game statistics:
