--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -44,7 +44,7 @@ digestbot.command.help.admin=\
   /delete <arg> — Удалить запись дайджеста под номером <arg>.\n\
   /send <chat id> <message> — Отправить <message> в <chat id>.\n\
   /sticker <chat id> <sticker id> — Отправить стикер в <chat id>.\n\
-  /image <chat id> <image url> — Отправить изображение в <chat id>.\n\
+  /image <chat id> <image url> — Отправить фото в <chat id>.\n\
   /hostip — IP-адрес хост-сервера.
 digestbot.command.hostip=Войди в меня (по SSH). Мой IP:
 digestbot.command.game=Игровая статистика:
