Implement downloading files Rest Service

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -50,10 +50,11 @@ digestbot.command.hostip=Come to me (via SSH). My IP address:
 digestbot.command.game=Game statistics:
 digestbot.error.access=Unfortunately, %username%, you are not allowed to use this command. Only my creator can use it.
 digestbot.error.chatid=Wrong chat "id" number.
-digestbot.error.sticker=Cannot send sticker "%s" into "%d" chat, error: "%s".
+digestbot.error.sticker=Cannot send sticker `%s` into `%d` chat, error: `%s`.
 digestbot.error.sticker.format=Wrong command format, please use:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Wrong command format, please use:\n`/send <chat id> <message>`.
 digestbot.error.hostip=Error getting host IP address:
 digestbot.error.response.toolong=Error: unexpectedly large response size
-digestbot.error.image=Cannot send image from url "%s" into "%d" chat, error: "%s".
+digestbot.error.image=Cannot send image from url `%s` into `%d` chat, error: `%s`.
 digestbot.error.image.format=Wrong command format, please use:\n`/image <chat id> <image url>`.
+digestbot.error.game=Cannot get game statistics, error `%s`.
