--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -50,10 +50,11 @@ digestbot.command.hostip=Войди в меня (по SSH). Мой IP:
 digestbot.command.game=Игровая статистика:
 digestbot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду. Её может использовать лишь мой создатель.
 digestbot.error.chatid=Неправильный номер "id" чата.
-digestbot.error.sticker=Не могу отправить стикер "%s" в чат "%d", ошибка: "%s".
+digestbot.error.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка: `%s`.
 digestbot.error.sticker.format=Неправильный формат комманды, используйте:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Неправильный формат комманды, используйте:\n`/send <chat id> <message>`.
 digestbot.error.hostip=Ошибка получения IP-адреса:
 digestbot.error.response.toolong=Ошибка: неожиданно большой размер ответа.
-digestbot.error.image=Не могу отправить изображение с адреса "%s" в чат "%d", ошибка: "%s".
+digestbot.error.image=Не могу отправить изображение с адреса `%s` в чат `%d`, ошибка: `%s`.
 digestbot.error.image.format=Неправильный формат комманды, используйте:\n`/image <chat id> <image url>`.
+digestbot.error.game=Не могу получить игровую статистику, ошибка: `%s`.
