Cut text instead of dropping it

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -54,7 +54,7 @@ digestbot.error.sticker=Не могу отправить стикер `%s` в ч
 digestbot.error.sticker.format=Неправильный формат комманды, используйте:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Неправильный формат комманды, используйте:\n`/send <chat id> <message>`.
 digestbot.error.hostip=Ошибка получения IP-адреса:
-digestbot.error.response.toolong=Ошибка: неожиданно большой размер ответа.
+digestbot.warn.response.long=<текст обрезан>
 digestbot.error.image=Не могу отправить изображение с адреса `%s` в чат `%d`, ошибка: `%s`.
 digestbot.error.image.format=Неправильный формат комманды, используйте:\n`/image <chat id> <image url>`.
 digestbot.error.game=Не могу получить игровую статистику, ошибка: `%s`.
