--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -54,7 +54,7 @@ digestbot.error.sticker=Cannot send sticker `%s` into `%d` chat, error: `%s`.
 digestbot.error.sticker.format=Wrong command format, please use:\n`/sticker <chat id> <sticker id>`.
 digestbot.error.send.format=Wrong command format, please use:\n`/send <chat id> <message>`.
 digestbot.error.hostip=Error getting host IP address:
-digestbot.error.response.toolong=Error: unexpectedly large response size
+digestbot.warn.response.long=<text cutted>
 digestbot.error.image=Cannot send image from url `%s` into `%d` chat, error: `%s`.
 digestbot.error.image.format=Wrong command format, please use:\n`/image <chat id> <image url>`.
 digestbot.error.game=Cannot get game statistics, error `%s`.
