Work in JSON localizator

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -21,14 +21,6 @@ markdown.title=Test Markdown Markup
 markdown.preview=Preview Markdown
 markdown.checkbox=Markdown/Code Highliter
 
-digestbot.command.hello=\
-  Hello, my creators!::\
-  Have a nice day, %username%!::\
-  Hey. I'm a little broken here. Fix me with the next commit.::\
-  Wow. Long time no see. Hi!::\
-  I'm still here. Hi! :3::\
-  Hi, dude!::\
-  Hello to you, my developer!::
 digestbot.command.start=Hi, I'm Gadget Hackwrench!\nPlease send me /help to get a full list of commands.
 digestbot.command.help=\
   Gadget Hackwrench commands help:\n\
@@ -40,7 +32,7 @@ digestbot.command.help=\
   /game — Show game server statistic.\n\
   /help — Show this help.
 digestbot.command.help.admin=\
-  /hello или /hi  — Get greeting from bot.\n\
+  /hello or /hi  — Get greeting from bot.\n\
   /delete <arg> — Remove digest entry by <arg> number.\n\
   /send <chat id> <message> — Send <message> into <chat id>.\n\
   /sticker <chat id> <sticker id> — Send sticker into <chat id>.\n\
@@ -58,3 +50,4 @@ digestbot.warn.response.long=<text cutted>
 digestbot.error.image=Cannot send image from url `%s` into `%d` chat, error: `%s`.
 digestbot.error.image.format=Wrong command format, please use:\n`/image <chat id> <image url>`.
 digestbot.error.game=Cannot get game statistics, error `%s`.
+digestbot.command.charts=📈 Please select a chart 📉
