--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -21,14 +21,6 @@ markdown.title=Тестирование разметки Markdown
 markdown.preview=Предпросмотр Markdown
 markdown.checkbox=Разметка Markdown/Подсветка кода
 
-digestbot.command.hello=\
-  Привет, создатели!::\
-  Хорошего дня, %username%!::\
-  Привет. Я тут немного сломалась. Выправи меня следующим коммитом.::\
-  Ого. Давно не виделись! Здравствуй.::\
-  Я всё ещё тут. Привет :3::\
-  Привет, красавчик!::\
-  Привет тебе, мой разработчик!::
 digestbot.command.start=Привет, я Гаечка! Для того чтобы получить список команд отправьте /help.
 digestbot.command.help=\
   Помощь по командам няшки-бота:\n\
@@ -58,3 +50,4 @@ digestbot.warn.response.long=<текст обрезан>
 digestbot.error.image=Не могу отправить изображение с адреса `%s` в чат `%d`, ошибка: `%s`.
 digestbot.error.image.format=Неправильный формат комманды, используйте:\n`/image <chat id> <image url>`.
 digestbot.error.game=Не могу получить игровую статистику, ошибка: `%s`.
+digestbot.command.charts=📈 Пожалуйста, выберите график 📉
