--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,6 +12,8 @@ digest.paginator.ok=OK
 digest.paginator.placeholder=#
 digest.search.placeholder=Search...
 digest.search.button=Find
+digest.search.digest.link=Digests
+digest.search.search==> Search
 digest.search.title=Search Results of Digests
 digest.search.results=Search Results
 digest.search.username=In user names:
