--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -12,6 +12,8 @@ digest.paginator.ok=ОК
 digest.paginator.placeholder=№
 digest.search.placeholder=Поиск...
 digest.search.button=Найти
+digest.search.digest.link=Дайджесты
+digest.search.search==> Поиск
 digest.search.title=Результаты поиска дайджестов
 digest.search.results=Результаты поиска
 digest.search.username=В именах пользователя:
