Add some generators

--- a/exchange-library/src/main/resources/messages.properties
+++ b/exchange-library/src/main/resources/messages.properties
@@ -1,1 +1,7 @@
-test=Testing...
+header=Exchange rates on %s:
+bank.ru=Source - CBR.
+bank.ua=Source - NBU.
+bank.by=Source - NB RB.
+bank.kz=Source — NBK.
+metal.ru=Source - CBR.
+change=Change:
