--- a/exchange-library/src/main/resources/messages_ru.properties
+++ b/exchange-library/src/main/resources/messages_ru.properties
@@ -1,1 +1,7 @@
-test=Проверка...
+header=Курс валют на %s:
+bank.ru=Источник — ЦБ РФ.
+bank.ua=Источник — НБУ.
+bank.by=Источник — НБ РБ.
+bank.kz=Источник — НБК.
+metal.ru=Источник — ЦБ РФ.
+change=Изменение:
