Add some filters

--- a/exchange-library/src/main/resources/messages.properties
+++ b/exchange-library/src/main/resources/messages.properties
@@ -1,7 +1,8 @@
 header=Exchange rates on %s:
-bank.ru=Source - CBR.
-bank.ua=Source - NBU.
-bank.by=Source - NB RB.
+bank.ru=Source — CBR.
+bank.ua=Source — NBU.
+bank.by=Source — NB RB.
 bank.kz=Source — NBK.
-metal.ru=Source - CBR.
+metal.ru=Source — CBR.
 change=Change:
+error=error
