Add general error handle

--- a/exchange-library/src/main/resources/messages.properties
+++ b/exchange-library/src/main/resources/messages.properties
@@ -5,4 +5,5 @@ bank.by=Source — NB RB.
 bank.kz=Source — NBK.
 metal.ru=Source — CBR.
 change=Change:
-error=error
+error.value=error
+error.report=Error getting currency rates data.
