--- a/exchange-library/src/main/resources/messages_ru.properties
+++ b/exchange-library/src/main/resources/messages_ru.properties
@@ -5,4 +5,5 @@ bank.by=Источник — НБ РБ.
 bank.kz=Источник — НБК.
 metal.ru=Источник — ЦБ РФ.
 change=Изменение:
-error=ошибка
+error.value=ошибка
+error.report=Ошибка получения данных котировок.
