--- a/exchange-library/src/main/resources/messages.properties
+++ b/exchange-library/src/main/resources/messages.properties
@@ -7,3 +7,5 @@ metal.ru=Source — CBR.
 change=Change:
 error.value=error
 error.report=Error getting currency rates data.
+change.up=⬆️
+change.down=⬇️
