--- a/exchange-library/src/main/resources/messages_ru.properties
+++ b/exchange-library/src/main/resources/messages_ru.properties
@@ -7,3 +7,5 @@ metal.ru=Источник — ЦБ РФ.
 change=Изменение:
 error.value=ошибка
 error.report=Ошибка получения данных котировок.
+change.up=⬆️
+change.down=⬇️
