--- a/exchange-library/src/main/resources/messages.properties
+++ b/exchange-library/src/main/resources/messages.properties
@@ -1,11 +1,15 @@
-header=Exchange rates on %s:
-bank.ru=Source — CBR.
-bank.ua=Source — NBU.
-bank.by=Source — NB RB.
-bank.kz=Source — NBK.
-metal.ru=Source — CBR.
 change=Change:
 error.value=error
 error.report=Error getting currency rates data.
 change.up=⬆️
 change.down=⬇️
+bank.header=Exchange rates on %s:
+bank.ru=Source — CBR.
+bank.ua=Source — NBU.
+bank.by=Source — NB RB.
+bank.kz=Source — NBK.
+metal.header=Prices for 1 gram on %s:
+metal.gold=Gold:
+metal.silver=Silver:
+metal.platinum=Platinum:
+metal.palladium=Palladium:
