--- a/exchange-library/src/main/resources/messages_ru.properties
+++ b/exchange-library/src/main/resources/messages_ru.properties
@@ -1,11 +1,15 @@
-header=Курс валют на %s:
-bank.ru=Источник — ЦБ РФ.
-bank.ua=Источник — НБУ.
-bank.by=Источник — НБ РБ.
-bank.kz=Источник — НБК.
-metal.ru=Источник — ЦБ РФ.
 change=Изменение:
 error.value=ошибка
 error.report=Ошибка получения данных котировок.
 change.up=⬆️
 change.down=⬇️
+bank.header=Курс валют на %s:
+bank.ru=Источник — ЦБ РФ.
+bank.ua=Источник — НБУ.
+bank.by=Источник — НБ РБ.
+bank.kz=Источник — НБК.
+metal.header=Цены за 1 грамм на %s:
+metal.gold=Золото:
+metal.silver=Серебро:
+metal.platinum=Платина:
+metal.palladium=Палладий:
