Change error localization string and scaling value

--- a/exchange-library/src/main/resources/messages.properties
+++ b/exchange-library/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 change=Change:
-error.value=error
+error.value=<error>
 error.report=Error getting currency rates data.
 change.up=⬆️
 change.down=⬇️
