--- a/exchange-library/src/main/resources/messages_ru.properties
+++ b/exchange-library/src/main/resources/messages_ru.properties
@@ -1,5 +1,5 @@
 change=Изменение:
-error.value=ошибка
+error.value=<error>
 error.report=Ошибка получения данных котировок.
 change.up=⬆️
 change.down=⬇️
