Add generator class

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,3 +1,19 @@
 motofan.title=New message on the MotoFan.Ru forum!
 motofan.wrote=wrote
 motofan.read=Read message in the topic:\n➡️
+
+exchange.change=Change:
+exchange.error.value=<error>
+exchange.error.report=Error getting currency rates data.
+exchange.change.up=⬆️
+exchange.change.down=⬇️
+exchange.bank.header=Exchange rates on %s:
+exchange.bank.ru=Source — CBR.
+exchange.bank.ua=Source — NBU.
+exchange.bank.by=Source — NB RB.
+exchange.bank.kz=Source — NBK.
+exchange.metal.header=Prices for 1 gram on %s:
+exchange.metal.gold=Gold:
+exchange.metal.silver=Silver:
+exchange.metal.platinum=Platinum:
+exchange.metal.palladium=Palladium:
