--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -1,3 +1,19 @@
 motofan.title=Новое сообщение на форуме MotoFan.Ru!
 motofan.wrote=пишет
 motofan.read=Прочитать сообщение в теме:\n➡️
+
+exchange.change=Изменение:
+exchange.error.value=<error>
+exchange.error.report=Ошибка получения данных котировок.
+exchange.change.up=⬆️
+exchange.change.down=⬇️
+exchange.bank.header=Курс валют на %s:
+exchange.bank.ru=Источник — ЦБ РФ.
+exchange.bank.ua=Источник — НБУ.
+exchange.bank.by=Источник — НБ РБ.
+exchange.bank.kz=Источник — НБК.
+exchange.metal.header=Цены за 1 грамм на %s:
+exchange.metal.gold=Золото:
+exchange.metal.silver=Серебро:
+exchange.metal.platinum=Платина:
+exchange.metal.palladium=Палладий:
