Add message sender class

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -17,3 +17,5 @@ exchange.metal.gold=Gold:
 exchange.metal.silver=Silver:
 exchange.metal.platinum=Platinum:
 exchange.metal.palladium=Palladium:
+
+bot.warn.send.long=<text is cropped>
