--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -17,3 +17,5 @@ exchange.metal.gold=Золото:
 exchange.metal.silver=Серебро:
 exchange.metal.platinum=Платина:
 exchange.metal.palladium=Палладий:
+
+bot.warn.send.long=<текст обрезан>
