Finalize bot sender class

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,6 @@ exchange.metal.platinum=Platinum:
 exchange.metal.palladium=Palladium:
 
 bot.warn.send.long=<text is cropped>
+bot.error.send.message=Cannot send message `%s` into `%d` chat, error: `%s`.
+bot.error.send.sticker=Cannot send sticker `%s` into `%d` chat, error: `%s`.
+bot.error.send.image=Cannot send image from url `%s` into `%s` chat, error: `%s`.
