--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -19,3 +19,6 @@ exchange.metal.platinum=Платина:
 exchange.metal.palladium=Палладий:
 
 bot.warn.send.long=<текст обрезан>
+bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка: `%s`.
+bot.error.send.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка: `%s`.
+bot.error.send.image=Не могу отправить изображение с адреса `%s` в чат `%s`, ошибка: `%s`.
