--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,3 +22,18 @@ bot.warn.send.long=<text is cropped>
 bot.error.send.message=Cannot send message `%s` into `%d` chat, error: `%s`.
 bot.error.send.sticker=Cannot send sticker `%s` into `%d` chat, error: `%s`.
 bot.error.send.image=Cannot send image from url `%s` into `%s` chat, error: `%s`.
+bot.event.added=Hello! 😚
+bot.event.user.new=\
+  Greetings, %username%! 😚\n\
+  Hello! :з\n\
+  I greet you in this cozy chat room! 😻\n\
+  Welcome %username%!\n\
+  Ardent greetings from our community! 👏
+bot.event.user.left=\
+  Unfortunately, we left %username%…\n\
+  %username% got off this ship.\n\
+  %username% left this chat.\n\
+  User %username% left us…\n\
+  Good riddance, %username%! 😈
+bot.event.photo.change=Hey you…! Return everything as it was! 😔
+bot.inline.error.cooldown=❌ Please wait %d sec.
