--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -22,3 +22,18 @@ bot.warn.send.long=<текст обрезан>
 bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка: `%s`.
 bot.error.send.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка: `%s`.
 bot.error.send.image=Не могу отправить изображение с адреса `%s` в чат `%s`, ошибка: `%s`.
+bot.event.added=Всем приветик! 😚
+bot.event.user.new=\
+  Приветствую вас, %username%! 😚\n\
+  Приветик! :з\n\
+  Приветствую вас в этом уютном чатике! 😻\n\
+  Приветствуем %username%!\n\
+  Пламенный привет от нашего сообщества! 👏
+bot.event.user.left=\
+  К сожалению, нас покинул %username%…\n\
+  %username% сошёл с этого корабля.\n\
+  %username% вышел из этого чата.\n\
+  Пользователь %username% оставил нас…\n\
+  Скатертью дорога, %username%! 😈
+bot.event.photo.change=Эй…! А ну, верни всё как было! 😔
+bot.inline.error.cooldown=❌ Подождите %d сек.
