--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -22,18 +22,30 @@ bot.warn.send.long=<text is cropped>
 bot.error.send.message=Cannot send message `%s` into `%d` chat, error: `%s`.
 bot.error.send.sticker=Cannot send sticker `%s` into `%d` chat, error: `%s`.
 bot.error.send.image=Cannot send image from url `%s` into `%s` chat, error: `%s`.
+bot.error.access=Unfortunately, %username%, you are not allowed to use this command.
 bot.event.added=Hello! 😚
 bot.event.user.new=\
-  Greetings, %username%! 😚\n\
-  Hello! :з\n\
-  I greet you in this cozy chat room! 😻\n\
-  Welcome %username%!\n\
-  Ardent greetings from our community! 👏
+Greetings, %username%! 😚\n\
+Hello! :з\n\
+I greet you in this cozy chat room! 😻\n\
+Welcome %username%!\n\
+Ardent greetings from our community! 👏
 bot.event.user.left=\
-  Unfortunately, we left %username%…\n\
-  %username% got off this ship.\n\
-  %username% left this chat.\n\
-  User %username% left us…\n\
-  Good riddance, %username%! 😈
+Unfortunately, we left %username%…\n\
+%username% got off this ship.\n\
+%username% left this chat.\n\
+User %username% left us…\n\
+Good riddance, %username%! 😈
 bot.event.photo.change=Hey you…! Return everything as it was! 😔
 bot.inline.error.cooldown=❌ Please wait %d sec.
+bot.command.start=\
+Hi, I'm Gadget Hackwrench!\n\
+Please send me /help to get a full list of commands.
+bot.command.hello=\
+Hello, my creators!\n\
+Have a nice day, %username%!\n\
+Hey. I'm a little broken here. Fix me with the next commit.\n\
+Wow. Long time no see. Hi!\n\
+I'm still here. Hi! :3\n\
+Hello, my brother. May I be of service this glorius day?\n\
+Hello to you, my developer!
