--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -22,18 +22,30 @@ bot.warn.send.long=<текст обрезан>
 bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка: `%s`.
 bot.error.send.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка: `%s`.
 bot.error.send.image=Не могу отправить изображение с адреса `%s` в чат `%s`, ошибка: `%s`.
+bot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.
 bot.event.added=Всем приветик! 😚
 bot.event.user.new=\
-  Приветствую вас, %username%! 😚\n\
-  Приветик! :з\n\
-  Приветствую вас в этом уютном чатике! 😻\n\
-  Приветствуем %username%!\n\
-  Пламенный привет от нашего сообщества! 👏
+Приветствую вас, %username%! 😚\n\
+Приветик! :з\n\
+Приветствую вас в этом уютном чатике! 😻\n\
+Приветствуем %username%!\n\
+Пламенный привет от нашего сообщества! 👏
 bot.event.user.left=\
-  К сожалению, нас покинул %username%…\n\
-  %username% сошёл с этого корабля.\n\
-  %username% вышел из этого чата.\n\
-  Пользователь %username% оставил нас…\n\
-  Скатертью дорога, %username%! 😈
+К сожалению, нас покинул %username%…\n\
+%username% сошёл с этого корабля.\n\
+%username% вышел из этого чата.\n\
+Пользователь %username% оставил нас…\n\
+Скатертью дорога, %username%! 😈
 bot.event.photo.change=Эй…! А ну, верни всё как было! 😔
 bot.inline.error.cooldown=❌ Подождите %d сек.
+bot.command.start=\
+Привет, я Гаечка!\n\
+Для того чтобы получить список команд отправьте /help.
+bot.command.hello=\
+Привет, создатели!\n\
+Хорошего дня, %username%!\n\
+Привет. Я тут немного сломалась. Выправи меня следующим коммитом.\n\
+Ого. Давно не виделись! Здравствуй.\n\
+Я всё ещё тут. Привет :3\n\
+Приветствую, брат. Чем я могу послужить тебе в этот прекрасный день?\n\
+Привет тебе, мой разработчик!
