Add Help Command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -49,3 +49,22 @@ Wow. Long time no see. Hi!\n\
 I'm still here. Hi! :3\n\
 Hello, my brother. May I be of service this glorius day?\n\
 Hello to you, my developer!
+bot.command.help=\
+Gadget Hackwrench commands help:\n\
+/digest — Show latest messages with `#digest` tag.\n\
+/rates — Show exchange rates.\n\
+/charts — Show charts of exchange rates.\n\
+/start — Show start greeting.\n\
+/coffee — Send sticker with coffee.\n\
+/game — Show game server statistic.\n\
+/subscribe — Subscribe to various MotoFan.Ru channels.\n\
+/help — Show this help.
+bot.command.help.admin=\
+/hello or /hi  — Get greeting from bot.\n\
+/show <page id> — Show digests list.\n\
+/delete <id> — Remove digest entry by <id> number.\n\
+/send <chat id> <message> — Send <message> into <chat id>.\n\
+/sticker <chat id> <sticker id> — Send sticker into <chat id>.\n\
+/image <chat id> <url> — Send photo into <chat id>.\n\
+/debug — Show debug commands.\n\
+/hostip — Host server IP address.
