--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -49,3 +49,22 @@ bot.command.hello=\
 Я всё ещё тут. Привет :3\n\
 Приветствую, брат. Чем я могу послужить тебе в этот прекрасный день?\n\
 Привет тебе, мой разработчик!
+bot.command.help=\
+Помощь по командам няшки-бота:"\n\
+/digest — Показать последние сообщения с тегом `#digest`.\n\
+/rates — Показать различные котировки.\n\
+/charts — Показать различные графики котировок.\n\
+/start — Приветствие.\n\
+/coffee — Стикер с кофе.\n\
+/game — Статистика игровых серверов.\n\
+/subscribe — Подписаться на различные каналы MotoFan.Ru.\n\
+/help — Эта справка.
+bot.command.help.admin=\
+/hello или /hi  — Получить привет от бота.\n\
+/show <page id> — Показать список записей дайджеста.\n\
+/delete <id> — Удалить запись дайджеста под номером <id>.\n\
+/send <chat id> <message> — Отправить <message> в <chat id>.\n\
+/sticker <chat id> <sticker id> — Отправить стикер в <chat id>.\n\
+/image <chat id> <image url> — Отправить фото в <chat id>.\n\
+/debug — Показать команды для отладки.\n\
+/hostip — IP-адрес хост-сервера.
