Fix help command

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -50,7 +50,7 @@ bot.command.hello=\
 Приветствую, брат. Чем я могу послужить тебе в этот прекрасный день?\n\
 Привет тебе, мой разработчик!
 bot.command.help=\
-Помощь по командам няшки-бота:"\n\
+Помощь по командам няшки-бота:\n\
 /digest — Показать последние сообщения с тегом `#digest`.\n\
 /rates — Показать различные котировки.\n\
 /charts — Показать различные графики котировок.\n\
