Add /hostip command

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -23,6 +23,7 @@ bot.error.send.message=Не могу отправить сообщение `%s` 
 bot.error.send.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка: `%s`.
 bot.error.send.image=Не могу отправить изображение с адреса `%s` в чат `%s`, ошибка: `%s`.
 bot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.
+bot.error.hostip=Ошибка получения IP-адреса:\n```\n%s\n```
 bot.event.added=Всем приветик! 😚
 bot.event.user.new=\
 Приветствую вас, %username%! 😚\n\
@@ -68,3 +69,4 @@ bot.command.help.admin=\
 /image <chat id> <image url> — Отправить фото в <chat id>.\n\
 /debug — Показать команды для отладки.\n\
 /hostip — IP-адрес хост-сервера.
+bot.command.hostip=Войди в меня (по SSH). Мой IP:\n```\n%s\n```
