Add /game command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -24,6 +24,7 @@ bot.error.send.sticker=Cannot send sticker `%s` into `%d` chat, error: `%s`.
 bot.error.send.image=Cannot send image from url `%s` into `%s` chat, error: `%s`.
 bot.error.access=Unfortunately, %username%, you are not allowed to use this command.
 bot.error.hostip=Error getting host IP address:\n```\n%s\n```
+bot.error.game=Cannot get game statistics, error:\n```\n%s\n```
 bot.event.added=Hello! 😚
 bot.event.user.new=\
 Greetings, %username%! 😚\n\
@@ -70,3 +71,4 @@ bot.command.help.admin=\
 /debug — Show debug commands.\n\
 /hostip — Host server IP address.
 bot.command.hostip=Come to me (via SSH). My IP address:\n```\n%s\n```
+bot.command.game=Game statistics:
