Add /send, /sticker, /image commands

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -19,12 +19,22 @@ exchange.metal.platinum=Платина:
 exchange.metal.palladium=Палладий:
 
 bot.warn.send.long=<текст обрезан>
-bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка: `%s`.
-bot.error.send.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка: `%s`.
-bot.error.send.image=Не могу отправить изображение с адреса `%s` в чат `%s`, ошибка: `%s`.
+bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка:\n```\n%s\n```
+bot.error.send.sticker=Не могу отправить стикер `%s` в чат `%d`, ошибка:\n```\n%s\n```
+bot.error.send.image=Не могу отправить изображение с адреса `%s` в чат `%d`, ошибка:\n```\n%s\n```
 bot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.
 bot.error.hostip=Ошибка получения IP-адреса:\n```\n%s\n```
 bot.error.game=Не могу получить игровую статистику, ошибка:\n```\n%s\n```
+bot.error.sticker.format=\
+Неправильный формат комманды, используйте:\n\
+`/sticker <chat id> <sticker id>`.
+bot.error.send.format=\
+Неправильный формат комманды, используйте:\n\
+`/send <chat id> <message>`.
+bot.error.image.format=\
+Неправильный формат комманды, используйте:\n\
+`/image <chat id> <image url>`.
+bot.error.chatid=Неправильный номер `id` чата.
 bot.event.added=Всем приветик! 😚
 bot.event.user.new=\
 Приветствую вас, %username%! 😚\n\
