--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,12 +19,22 @@ exchange.metal.platinum=Platinum:
 exchange.metal.palladium=Palladium:
 
 bot.warn.send.long=<text is cropped>
-bot.error.send.message=Cannot send message `%s` into `%d` chat, error: `%s`.
-bot.error.send.sticker=Cannot send sticker `%s` into `%d` chat, error: `%s`.
-bot.error.send.image=Cannot send image from url `%s` into `%s` chat, error: `%s`.
+bot.error.send.message=Cannot send message `%s` into `%d` chat, error:\n```\n%s\n```
+bot.error.send.sticker=Cannot send sticker `%s` into `%d` chat, error:\n```\n%s\n```
+bot.error.send.image=Cannot send image from url `%s` into `%d` chat, error:\n```\n%s\n```
 bot.error.access=Unfortunately, %username%, you are not allowed to use this command.
 bot.error.hostip=Error getting host IP address:\n```\n%s\n```
 bot.error.game=Cannot get game statistics, error:\n```\n%s\n```
+bot.error.sticker.format=\
+Wrong command format, please use:\n\
+`/sticker <chat id> <sticker id>`.
+bot.error.send.format=\
+Wrong command format, please use:\n\
+`/send <chat id> <message>`.
+bot.error.image.format=\
+Wrong command format, please use:\n\
+`/image <chat id> <image url>`.
+bot.error.chatid=Wrong chat `id` number.
 bot.event.added=Hello! 😚
 bot.event.user.new=\
 Greetings, %username%! 😚\n\
