Add strings and chart service to chart command

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -25,6 +25,7 @@ bot.error.send.image=Cannot send image from url `%s` into `%d` chat, error:\n```
 bot.error.access=Unfortunately, %username%, you are not allowed to use this command.
 bot.error.hostip=Error getting host IP address:\n```\n%s\n```
 bot.error.game=Cannot get game statistics, error:\n```\n%s\n```
+bot.error.chart=Cannot get chart image, error:\n```\n%s\n```
 bot.error.sticker.format=\
 Wrong command format, please use:\n\
 `/sticker <chat id> <sticker id>`.
@@ -50,6 +51,7 @@ User %username% left us…\n\
 Good riddance, %username%! 😈
 bot.event.photo.change=Hey you…! Return everything as it was! 😔
 bot.inline.error.cooldown=❌ Please wait %d sec.
+bot.inline.chart.selected=You have chosen:
 bot.command.start=\
 Hi, I'm Gadget Hackwrench!\n\
 Please send me /help to get a full list of commands.
@@ -82,3 +84,4 @@ bot.command.help.admin=\
 /hostip — Host server IP address.
 bot.command.hostip=Come to me (via SSH). My IP address:\n```\n%s\n```
 bot.command.game=Game statistics:
+bot.command.charts=📈 Please select a chart 📉
