--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -25,6 +25,7 @@ bot.error.send.image=Не могу отправить изображение с 
 bot.error.access=К сожалению, %username%, ты не имеешь права использовать эту команду.
 bot.error.hostip=Ошибка получения IP-адреса:\n```\n%s\n```
 bot.error.game=Не могу получить игровую статистику, ошибка:\n```\n%s\n```
+bot.error.chart=Не могу получить изображение графика, ошибка:\n```\n%s\n```
 bot.error.sticker.format=\
 Неправильный формат комманды, используйте:\n\
 `/sticker <chat id> <sticker id>`.
@@ -50,6 +51,7 @@ bot.event.user.left=\
 Скатертью дорога, %username%! 😈
 bot.event.photo.change=Эй…! А ну, верни всё как было! 😔
 bot.inline.error.cooldown=❌ Подождите %d сек.
+bot.inline.chart.selected=Вы выбрали:
 bot.command.start=\
 Привет, я Гаечка!\n\
 Для того чтобы получить список команд отправьте /help.
@@ -82,3 +84,4 @@ bot.command.help.admin=\
 /hostip — IP-адрес хост-сервера.
 bot.command.hostip=Войди в меня (по SSH). Мой IP:\n```\n%s\n```
 bot.command.game=Игровая статистика:
+bot.command.charts=📈 Пожалуйста, выберите график 📉
