Prepare exchange API for bot

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -12,11 +12,16 @@ exchange.bank.ru=Source — CBR.
 exchange.bank.ua=Source — NBU.
 exchange.bank.by=Source — NB RB.
 exchange.bank.kz=Source — NBK.
-exchange.metal.header=Prices for 1 gram on %s:
-exchange.metal.gold=Gold:
-exchange.metal.silver=Silver:
-exchange.metal.platinum=Platinum:
-exchange.metal.palladium=Palladium:
+exchange.metal.ru.header=Prices for 1 gram on %s:
+exchange.metal.ru.gold=Gold:
+exchange.metal.ru.silver=Silver:
+exchange.metal.ru.platinum=Platinum:
+exchange.metal.ru.palladium=Palladium:
+exchange.bank.ru.button=🇷🇺
+exchange.bank.ua.button=🇺🇦
+exchange.bank.by.button=🇧🇾
+exchange.bank.kz.button=🇰🇿
+exchange.metal.ru.button=🤘
 
 bot.warn.send.long=<text is cropped>
 bot.error.send.message=Cannot send message `%s` into `%d` chat, error:\n```\n%s\n```
