--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -12,11 +12,16 @@ exchange.bank.ru=Источник — ЦБ РФ.
 exchange.bank.ua=Источник — НБУ.
 exchange.bank.by=Источник — НБ РБ.
 exchange.bank.kz=Источник — НБК.
-exchange.metal.header=Цены за 1 грамм на %s:
-exchange.metal.gold=Золото:
-exchange.metal.silver=Серебро:
-exchange.metal.platinum=Платина:
-exchange.metal.palladium=Палладий:
+exchange.metal.ru.header=Цены за 1 грамм на %s:
+exchange.metal.ru.gold=Золото:
+exchange.metal.ru.silver=Серебро:
+exchange.metal.ru.platinum=Платина:
+exchange.metal.ru.palladium=Палладий:
+exchange.bank.ru.button=🇷🇺
+exchange.bank.ua.button=🇺🇦
+exchange.bank.by.button=🇧🇾
+exchange.bank.kz.button=🇰🇿
+exchange.metal.ru.button=🤘
 
 bot.warn.send.long=<текст обрезан>
 bot.error.send.message=Не могу отправить сообщение `%s` в чат `%d`, ошибка:\n```\n%s\n```
