Refactor exchange api, add enum class for keys

--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -56,7 +56,7 @@ bot.event.user.left=\
 Скатертью дорога, %username%! 😈
 bot.event.photo.change=Эй…! А ну, верни всё как было! 😔
 bot.inline.error.cooldown=❌ Подождите %d сек.
-bot.inline.chart.selected=Вы выбрали:
+bot.inline.selected=Вы выбрали:
 bot.command.start=\
 Привет, я Гаечка!\n\
 Для того чтобы получить список команд отправьте /help.
