--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -56,7 +56,7 @@ User %username% left us…\n\
 Good riddance, %username%! 😈
 bot.event.photo.change=Hey you…! Return everything as it was! 😔
 bot.inline.error.cooldown=❌ Please wait %d sec.
-bot.inline.chart.selected=You have chosen:
+bot.inline.selected=You have chosen:
 bot.command.start=\
 Hi, I'm Gadget Hackwrench!\n\
 Please send me /help to get a full list of commands.
