Add subscribe keyboard and strings

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -90,3 +90,16 @@ bot.command.help.admin=\
 bot.command.hostip=Come to me (via SSH). My IP address:\n```\n%s\n```
 bot.command.game=Game statistics:
 bot.command.charts=📈 Please select a chart 📉
+bot.command.subscribe=\
+Chat `%d` subscriptions to various channels.\n\n\
+1. New posts on the MotoFan.Ru forum\n\
+Status: %s\n\n\
+2. Digests and News from MotoFan.Ru group in Telegram\n\
+Status: %s\n\n\
+Please select an action:
+bot.command.subscribe.subscribed=✅ Subscribed.
+bot.command.subscribe.unsubscribed=❌ Unsubscribed.
+bot.command.subscribe.button.subscribe.motofan=1. Subscribe
+bot.command.subscribe.button.unsubscribe.motofan=1. Unsubscribe
+bot.command.subscribe.button.subscribe.digest=2. Subscribe
+bot.command.subscribe.button.unsubscribe.digest=2. Unsubscribe
