--- a/src/main/resources/messages_ru.properties
+++ b/src/main/resources/messages_ru.properties
@@ -90,3 +90,16 @@ bot.command.help.admin=\
 bot.command.hostip=Войди в меня (по SSH). Мой IP:\n```\n%s\n```
 bot.command.game=Игровая статистика:
 bot.command.charts=📈 Пожалуйста, выберите график 📉
+bot.command.subscribe=\
+Подписка чата `%d` на различные каналы.\n\n\
+1. Новые сообщения форума MotoFan.Ru\n\
+Статус: %s\n\n\
+2. Дайджесты и новости группы MotoFan.Ru в Telegram:\n\
+Статус: %s\n\n\
+Пожалуйста выберите действие:
+bot.command.subscribe.subscribed=✅ Подписка оформлена.
+bot.command.subscribe.unsubscribed=❌ Подписка не оформлена.
+bot.command.subscribe.button.subscribe.motofan=1. Подписаться
+bot.command.subscribe.button.unsubscribe.motofan=1. Отписаться
+bot.command.subscribe.button.subscribe.digest=2. Подписаться
+bot.command.subscribe.button.unsubscribe.digest=2. Отписаться
